--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,39 @@
-# Dependencies
-node_modules/
-.pnp
-.pnp.js
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
 
-# Testing
-coverage/
+# testing
+/coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
-build/
+# production
+/build
 
-# Misc
+# misc
 .DS_Store
 *.pem
 
-# Debug
+# debug
 npm-debug.log*
 yarn-debug.log*
-ts-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Environment Variables (Keep these secret!)
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.env
-*.env.*
+# env files
+.env*
 
-# Vercel
+# vercel
 .vercel
 
-# TypeScript
+# typescript
 *.tsbuildinfo
 next-env.d.ts
 
-# Python / Print Service
+# python / print service
 __pycache__/
 *.pyc
 *.pyo
@@ -59,6 +54,6 @@ coverage.xml
 *.log
 .pytest_cache/
 
-# Generated Labels
+# generated labels
 labels/
 print-service/labels/
