--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "eslint"
     },
     "dependencies": {
+        "@mmote/niimblue-node": "^0.0.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
         "@radix-ui/react-dialog": "^1.1.15",
         "@radix-ui/react-label": "^2.1.8",
